# fpga-matrix-mult-zynq

./: LICENSE  README.md
hls/baseline/: hls_config.cfg  mmult.h  mmult_accel.cpp
hls/optimised/: mmult.h  mmult_test.cpp
hls/pipelined/: hls_compile.rpt  mmult.h
hls/wrapped_axi/: hls_config.cfg  hls_cosim.rpt  mmult.h
reports/: README.md  hls_baseline.rpt  hls_optimised.rpt  hls_wrapped.rpt
vitis/matrix_1024_app/src/: UserConfig.cmake  compile_commands.json  helloworld.c  lib_xmmult_hw.c  xhls_accel_sinit.c
vitis/matrix_32_app/src/: CMakeLists.txt  Hello_worldExample.cmake  app.yaml  compile_commands.json  helloworld.c  lib_xmmult_hw.h  lscript.ld
vitis/platform/export/sdk_plt/: sdk_plt.xpfm
vitis/platform/export/sdk_plt/hw/: design_1_wrapper.xsa
vitis/platform/export/sdk_plt/hw/sdt/: design_1_wrapper.bit  pcw.dtsi  pl.dtsi  ps7_init.c  ps7_init.h  ps7_init.html  ps7_init.tcl  ps7_init_gpl.c  ps7_init_gpl.h  system-top.dts
vitis/platform/export/sdk_plt/sw/: sdk_plt.spfm
vitis/platform/export/sdk_plt/sw/boot/: fsbl.elf
vitis/platform/export/sdk_plt/sw/standalone_ps7_cortexa9_0/: CMakeLists.txt  Findcommon.cmake  Findcommonmeta.cmake  bsp.yaml  lib_list.yaml
vitis/platform/export/sdk_plt/sw/standalone_ps7_cortexa9_0/hw_artifacts/: ps7_cortexa9_0_baremetal.dts  sdt.dts
vitis/platform/export/sdk_plt/sw/standalone_ps7_cortexa9_0/hw_artifacts/drivers/HLS_accel_v3_0/src/: CMakeLists.txt  xhls_accel.c  xhls_accel.h  xhls_accel_linux.c
vitis/platform/export/sdk_plt/sw/standalone_ps7_cortexa9_0/include/: DRVLISTConfig.cmake  bspconfig.h  distro.conf  (+4 more)
(+5 files in other folders)
